--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,9 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/firebase-messaging-sw.js",  
+              "src/manifest.json"
             ],
             "styles": [
               "src/styles.scss"
@@ -100,5 +102,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "4c749d5f-2917-4395-a395-fabdc218dfac"
   }
 }
